--- a/globenow-tiles/style.css
+++ b/globenow-tiles/style.css
@@ -3,7 +3,7 @@
 	Theme URI: http://www.theglobeandmail.com
 	Description: A tile-based layout for The Globe and Mail's Wordpress theme, built up from Todd Motto's HTML5 Blank theme
 	Version: 0.1
-	Author: Stuart A. Thompson and Chris Manza
+	Author: Stuart A. Thompson and Matt Frehner
 	Author URI: http://www.theglobeandmail.com
 	Tags: Blank, HTML5, CSS3
 	
