--- a/themes/globenow-tiles/style.css
+++ b/themes/globenow-tiles/style.css
@@ -572,7 +572,6 @@ margin-left: 15px;
 /* Error pages - 404 and 503 */
 .fourohfour{
 	text-align:center;
-	background: #fff url('http://beta.images.theglobeandmail.com/media/www/images/ui-elements/paper_rip.png') no-repeat 0 0;
 	margin: 0 -20px !important;
 }
 .fourohfour h2 {
@@ -589,10 +588,10 @@ margin: 10px 0;
 width: 540px;
 margin: 0 auto;
 }
-.fourohfour{
+/*.fourohfour{
 padding: 20px;
 width: 1000px;
-}
+}*/
 
 /*------------------------------------*\
     PAGES
