--- a/themes/globenow-tiles/style.css
+++ b/themes/globenow-tiles/style.css
@@ -815,7 +815,7 @@ margin: 0 auto;
 
 /* iPad */
 @media only screen and (max-width:840px) and (min-width: 480px){
-	#loop,#filters-bar,.sidebar,#new-alert-container,#mobile-header-wrapper{
+	#loop,#filters-bar,.sidebar,#new-alert-container,#mobile-header-wrapper,.topics{
 		width:100%;
 	}
 	.wrapper{
@@ -830,7 +830,6 @@ margin: 0 auto;
 	#mobile-header-logo{
 		margin:5px 0 0 20px !important;
 	}
-
 }
 @media only screen and (min-width:1024px) {
 
