--- a/plugins/globe-ajax-refresh/ajaxrefresh.css
+++ b/plugins/globe-ajax-refresh/ajaxrefresh.css
@@ -1,3 +1,11 @@
 .ajaxposts-new{
 	display:none;
 }
+.ajaxposts-new article.seen{
+	background-color:white;
+	border:1px solid #d2d2d2; 
+}
+.ajaxposts-new article{
+	background-color:#FCFFF0;
+	border:1px solid rgb(216, 210, 180);
+}
