--- a/plugins/globe-ajax-tags/ajaxtags.css
+++ b/plugins/globe-ajax-tags/ajaxtags.css
@@ -112,7 +112,27 @@ user-select: none;
 	margin-top: 3px;
 	margin-right: 15px;
 }
-
+#filters-bar h3{
+	font-size:14px;
+	text-transform: uppercase;
+	float:left;
+	margin: 7px 0 0;
+}
+#filters-bar  h3 a{
+	font-family:"OpenSans",sans-serif;
+	font-weight:bold;
+	color:#333;
+}
+#filters-bar h3 a.selected{
+	color:#d60000;
+}
+#filter-splitter{
+	min-height: 27px;
+	margin: 2px 18px;
+	float: left;
+	width: 1px;
+	background-color: #b0b0b0;
+}
 /* Mobile */
 .ajaxtags-container{
 	position: relative;
