--- a/plugins/globe-ajax-tags/ajaxtags.css
+++ b/plugins/globe-ajax-tags/ajaxtags.css
@@ -3,7 +3,7 @@
 	padding: 10px 20px;
 	background-color:#f5f5f5;
 	border:1px solid #d2d2d2;
-	margin-bottom: -11px;
+	margin-bottom: 0;
 	float:left;
 }
 .filters {
@@ -47,9 +47,10 @@ min-height: 1px;
 overflow: hidden;
 display: none;
 padding:10px 20px 8px;
-margin: 10px 0 -11px;
+margin: 0;
 background-color: #E9E9E9;
 border: 1px solid #d1d1d1;
+border-top:0;
 }
 .topics.showing{
 	display:block;
@@ -95,12 +96,12 @@ cursor: pointer;
 user-select: none;
 }
 #filters-error{
-	padding: 20px 20px 10px;
+	padding: 15px 20px 10px;
 	font-size: 14px;
 	display: none;
 	clear: both;
 	border: 1px solid #d0d0d0;
-	margin-bottom: -11px;
+	border-top:0;
 }
 #filters-error a{
 	font-family:"PrattHeavy",Georgia,sans-serif;
