--- a/themes/globenow-tiles/style.css
+++ b/themes/globenow-tiles/style.css
@@ -454,6 +454,7 @@ margin-left: 15px;
 }
 #search-box{
 	margin-top:-50px;
+	visibility: hidden;
 	background-color: #eee;
 	width: 100%;
 	padding: 10px;
