--- a/themes/globenow-tiles/style.css
+++ b/themes/globenow-tiles/style.css
@@ -487,6 +487,14 @@ margin-left: 15px;
 	color:#DA161F;
 	outline:none;
 }
+.wp-caption .wp-caption-text,.gallery-caption {
+	font-size:11px;
+	background-color:#2B2B2B;
+	color:white;
+	line-height:17px;
+	margin:0;
+	padding:5px;
+}
 /* mobile menu */
 #mobile-menu{
 	display:none;
@@ -869,7 +877,7 @@ and (orientation : landscape) {
 	}
 	article h2, .breaking h2{
 		font-size:20px;
-		margin:0;
+		margin:0 0 15px 0;
 		line-height: 1.3;
 	}
 	.byline,.placeline{
