--- a/themes/globenow-tiles/style.css
+++ b/themes/globenow-tiles/style.css
@@ -487,6 +487,9 @@ margin-left: 15px;
 	color:#DA161F;
 	outline:none;
 }
+.wp-caption{
+	width:100% !important;
+}
 .wp-caption .wp-caption-text,.gallery-caption {
 	font-size:11px;
 	background-color:#2B2B2B;
