--- a/themes/globenow-tiles/style.css
+++ b/themes/globenow-tiles/style.css
@@ -329,23 +329,6 @@ background: url("http://beta.images.theglobeandmail.com/static/ROB/interactives/
 	box-shadow: 3px 3px 3px #E7E7E7;
 	font-size: 10px !important;
 }
-/*
-.share-reaction-icon.star a.liked img,.share-reaction-icon.star:hover a img{
-	display:none;
-}
-.share-reaction-icon.star a span{
-	display: none;
-	background-color:#363636;
-	color:white;
-	font-size:10px;
-	font-family:Helvetica,sans-serif;
-	font-weight:bold;
-	padding:4px 7px 5px;
-}
-.share-reaction-icon.star a:hover span,.share-reaction-icon.star a.liked span{
-	display: inherit !important;
-}
-*/
 .share-reaction-icon.star a span{
 	display:none;
 }
@@ -753,6 +736,27 @@ margin: 0 auto;
 @media only screen and (min-width:320px) {
 
 }
+/* iPad */
+@media only screen and (max-width:680px) {
+	#loop,#filters-bar,.sidebar,#new-alert-container,#mobile-header-wrapper,.topics{
+		width:100%;
+	}
+	.wrapper{
+		width:95%;
+	}
+	#search-box input{
+		width:70%;
+	}
+	.search-submit{
+		display:none;
+	}
+	#mobile-header-logo{
+		margin:5px 0 0 20px !important;
+	}
+	#mobile-about-button{
+		margin-right:10px;
+	}
+}
 /* iPhone 5 */
 @media only screen 
 and (min-device-width : 320px) 
@@ -766,22 +770,16 @@ and (orientation : landscape) {
 	}
 }
 /* Smartphones */
-@media only screen and (max-width:501px) {
+@media only screen and (max-width:541px) {
 	body{
 		font:14px/1.4 "OpenSans",Helvetica,Arial,sans-serif;
 	}
-	.wrapper,#loop,.content,article,#mobile-header-wrapper{
+	.wrapper,#loop,.content,#mobile-header-wrapper{
 		width:100%;
 		margin-left:0;
 		padding:0;
 		line-height:1.5;
 	}
-	.strip.small{
-	/*
-	margin:0 0 0;
-		background-color:white;
-	
-*/}
 	article{
 		width:92%;
 		padding:10px;
@@ -906,20 +904,6 @@ and (orientation : landscape) {
 	}
 	.gig-button-container{
 	}
-	/*
-.single .gig-button-container{
-		float: left;
-		position: absolute;
-		left: 4px;
-		top: 0px;
-		margin-top: 8px;
-		background-color:white;
-		width: 20px !important;
-	}
-	.single .share-reaction-icon{
-		margin-bottom: 6px;
-	}
-*/
 	.share-reaction-icon{
 		float:left;
 		margin-right:7px;
@@ -1004,28 +988,14 @@ and (orientation : landscape) {
 	.globeabout-right{
 		right:-10px;
 	}
+	.footer{
+		margin:0 39px;
+	}
 }
-
-
-/* iPad */
-@media only screen and (max-width:680px) {
-	#loop,#filters-bar,.sidebar,#new-alert-container,#mobile-header-wrapper,.topics{
-		width:100%;
-	}
-	.wrapper{
-		width:95% !important;
-	}
-	#search-box input{
-		width:70%;
-	}
-	.search-submit{
-		display:none;
-	}
-	#mobile-header-logo{
-		margin:5px 0 0 20px !important;
-	}
-	#mobile-about-button{
-		margin-right:10px;
+/* Smartphones: Globe header */
+@media only screen and (max-width:541px) and (min-width:420px) {
+	#mobile-header #mobile-header-logo{
+		margin-top:0 !important;
 	}
 }
 @media only screen and (min-width:1024px) {
