Gold colour adjustment

--- a/themes/globenow-tiles/style.css
+++ b/themes/globenow-tiles/style.css
@@ -197,7 +197,7 @@ article .twitter-tweet{
 	color:#d60000;
 }
 .tag-medal .datedate a span{
-	color:#D9A441;
+	color:#DF9100;
 }
 /* Meta */
 .date-container{
