twitter, plus css/js version upgrade

--- a/themes/globenow-tiles/style.css
+++ b/themes/globenow-tiles/style.css
@@ -57,9 +57,9 @@ iframe{
 	max-width:100%;
 	border:0;
 }
-iframe.twitter-tweet{
+/*iframe.twitter-tweet{
 	max-width:100%;
-}
+}*/
 
 a {
 	color:red;
